WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210645
REGRESSION (
r211095
): [iOS] TestRunnerWKWebView leaks @property accessibilitySpeakSelectionContent
https://bugs.webkit.org/show_bug.cgi?id=210645
Summary
REGRESSION (r211095): [iOS] TestRunnerWKWebView leaks @property accessibility...
David Kilzer (:ddkilzer)
Reported
2020-04-17 02:49:42 PDT
TestRunnerWKWebView leaks @property accessibilitySpeakSelectionContent. Regressed in
r211095
for
Bug 166794
. Found by clang static analyzer: The '_accessibilitySpeakSelectionContent' ivar in 'TestRunnerWKWebView' was copied by a synthesized property but not released before '[super dealloc]'
Attachments
Patch v1
(1.50 KB, patch)
2020-04-17 02:53 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-04-17 02:50:25 PDT
<
rdar://problem/61927607
>
David Kilzer (:ddkilzer)
Comment 2
2020-04-17 02:53:42 PDT
Created
attachment 396750
[details]
Patch v1
EWS
Comment 3
2020-04-17 16:05:40 PDT
Committed
r260298
: <
https://trac.webkit.org/changeset/260298
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 396750
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug