Bug 210645: REGRESSION (r211095): [iOS] TestRunnerWKWebView leaks @property accessibilitySpeakSelectionContent <https://webkit.org/b/210645> <rdar://problem/61927607>

Reviewed by Chris Fleizach.

* WebKitTestRunner/cocoa/TestRunnerWKWebView.mm:
(-[TestRunnerWKWebView dealloc]):
- Release accessibilitySpeakSelectionContent in -dealloc.


Canonical link: https://commits.webkit.org/223560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260298 268f45cc-cd09-0410-ab3c-d52691b4dbfc